--- a/.editorconfig
+++ b/.editorconfig
@@ -15,3 +15,8 @@ trim_trailing_whitespace = true
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.csv]
+insert_final_newline = false
+max_line_length = off
+trim_trailing_whitespace = true
